--- a/client/public/index.html
+++ b/client/public/index.html
@@ -27,8 +27,7 @@
     -->
     <title>React App</title>
   </head>
-  <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
+  <body style="height: 100%; margin: 0">
     <div id="root"></div>
   </body>
 </html>
